course category is added

--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,6 @@ ReWriteRule ^forget-password$       forget-password.php           [L]
 ReWriteRule ^student-logout$                student-logout.php           [L]
 ReWriteRule ^student-reset-password$                student-reset-password.php           [L]
 ReWriteRule ^student-profile$                student-profile.php           [L]
+ReWriteRule ^instructor-dashboard$                instructor-dashboard.php           [L]
+ReWriteRule ^instructor-logout$                instructor-logout.php           [L]
+ReWriteRule ^instructor-profile$                instructor-profile.php           [L]
