course create form is added

--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,4 @@ ReWriteRule ^student-profile$                student-profile.php           [L]
 ReWriteRule ^instructor-dashboard$                instructor-dashboard.php           [L]
 ReWriteRule ^instructor-logout$                instructor-logout.php           [L]
 ReWriteRule ^instructor-profile$                instructor-profile.php           [L]
+ReWriteRule ^instructor-course-create$                instructor-course-create.php           [L]
