course edit is added

--- a/.htaccess
+++ b/.htaccess
@@ -12,3 +12,10 @@ ReWriteRule ^instructor-dashboard$                instructor-dashboard.php      
 ReWriteRule ^instructor-logout$                instructor-logout.php           [L]
 ReWriteRule ^instructor-profile$                instructor-profile.php           [L]
 ReWriteRule ^instructor-course-create$                instructor-course-create.php           [L]
+ReWriteRule ^instructor-courses$                instructor-courses.php           [L]
+ReWriteRule ^instructor-course-edit/(.*)$/?$                instructor-course-edit.php?id=$1           [L]
+ReWriteRule ^instructor-course-edit-basic/(.*)$/?$                instructor-course-edit-basic.php?id=$1           [L]
+ReWriteRule ^instructor-course-edit-featured-photo/(.*)$/?$                instructor-course-edit-featured-photo.php?id=$1           [L]
+ReWriteRule ^instructor-course-edit-featured-banner/(.*)$/?$                instructor-course-edit-featured-banner.php?id=$1           [L]
+ReWriteRule ^instructor-course-edit-featured-video/(.*)$/?$                instructor-course-edit-featured-video.php?id=$1           [L]
+ReWriteRule ^instructor-course-edit-curriculum/(.*)$/?$                instructor-course-edit-curriculum.php?id=$1           [L]
