--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,7 @@ ReWriteRule ^instructor-profile$                instructor-profile.php          
 ReWriteRule ^instructor-course-create$                instructor-course-create.php           [L]
 ReWriteRule ^instructor-courses$                instructor-courses.php           [L]
 ReWriteRule ^instructor-course-edit-basic/(.*)$/?$                instructor-course-edit-basic.php?id=$1           [L]
+ReWriteRule ^instructor-course-delete/(.*)$/?$                instructor-course-delete.php?id=$1           [L]
 ReWriteRule ^instructor-course-edit-featured-photo/(.*)$/?$                instructor-course-edit-featured-photo.php?id=$1           [L]
 ReWriteRule ^instructor-course-edit-featured-banner/(.*)$/?$                instructor-course-edit-featured-banner.php?id=$1           [L]
 ReWriteRule ^instructor-course-edit-featured-video/(.*)$/?$                instructor-course-edit-featured-video.php?id=$1           [L]
